Fix bug to realign buttons of last two projects
Remove margin-bottom on last project to realign buttons of last two
projects.

--- a/assets/styles/layout/_main.scss
+++ b/assets/styles/layout/_main.scss
@@ -115,10 +115,6 @@
   color: $color-gallery;
 }
 
-.project-section .project:last-child {
-  margin-bottom: 130px;
-}
-
 .project-info { // flexbox child
   text-align: justify;
 }
